# rust_playground

./: Cargo.toml
src/: lib.rs
src/rpg/: di1.rs  di2.rs  di3.rs  di4.rs  mod.rs  typeclass_as_router.rs  typeclass_di.rs
