[package]
name = "rpg"
version = "0.1.0"
authors = ["lancegatlin"]
edition = "2018"

[dependencies]
itertools = "0.7.8"
serde = { version = "1.0.90", optional = true }
regex = "1"
lazy_static = "1.3.0"
yaml-rust = "0.4"
im="12.3.4"
linked-hash-map="0.5.2"
strum = "0.15.0"
strum_macros = "0.15.0"
log = "0.4"
frunk = "0.3.0"
unicase = "2.4.0"
